Mobile nav spacing fix

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -358,7 +358,7 @@ body.is-active {
     nav {
       display: flex;
       height: 100%;
-      align-items: center;
+      margin-top: 6rem;
     }
 
     .nav-mobile {
